--- a/app/src/main/res/layout/recycler_dashboard_single_row.xml
+++ b/app/src/main/res/layout/recycler_dashboard_single_row.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#ffffff"
+    android:layout_margin="6dp"
+    app:cardCornerRadius="4dp">
+<LinearLayout
     android:id="@+id/llContent"
     android:layout_width="match_parent"
     android:layout_height="150dp"
@@ -70,3 +77,4 @@
 
 
 </LinearLayout>
+</androidx.cardview.widget.CardView>
